--- a/package.json
+++ b/package.json
@@ -16,8 +16,16 @@
   },
   "license": "0BSD",
   "dependencies": {
+    "@fontsource/major-mono-display": "^4.0.1",
+    "@fontsource/open-sans": "^4.0.1",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sass": "^2.8.0",
+    "gatsby-plugin-typography": "^2.9.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19"
   }
 }
