Email JS integration along with loader

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@fontsource/major-mono-display": "^4.0.1",
     "@fontsource/open-sans": "^4.0.1",
     "@material-ui/core": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "emailjs-com": "^2.6.4",
     "gatsby": "^2.26.1",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.8.0",
