--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "emailjs-com": "^2.6.4",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby-plugin-offline": "^3.8.0",
+    "gatsby-plugin-react-helmet": "^3.8.0",
     "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-robots-txt": "^1.5.5",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-typography": "^2.9.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19"
   }
