--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "emailjs-com": "^2.6.4",
     "gatsby": "^2.26.1",
+    "gatsby-plugin-google-analytics": "^2.9.0",
+    "gatsby-plugin-google-gtag": "^2.6.0",
     "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-offline": "^3.8.0",
     "gatsby-plugin-react-helmet": "^3.8.0",
